--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
     <title>Document</title>
 </head>
 <body>
+    
     <h1> hello this my live code</h1>
+    <img src="C:\Users\MAHI\Desktop\CLOUD 5\LIVE-CODE\images.jpeg">
+    <img src="">
+
+    <main> 
+    <h2>About Me</h2>
+   <p>This is my GitHub page</p>
+    <p>Check out my <a href="file:///C:/Users/MAHI/Desktop/CLOUD%205/LIVE-CODE/index.html">GitHub profile</a>.</p>
+    </main>
+  
+
 </body>
 </html>
