--- a/index.html
+++ b/index.html
@@ -5,16 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body style="background-color: burlywood; border: 10px; border-color: black; text-align: center;">
     
-    <h1> hello this my live code</h1>
-    <img src="C:\Users\MAHI\Desktop\CLOUD 5\LIVE-CODE\images.jpeg">
-    <img src="">
+    <h1 style=" text-align: center; font-size:xx-large; color: white;"> hello this my live code</h1>
+    <br>
+
+     <img src="C:\Users\MAHI\Desktop\images.jpeg">
+     <br>
+     <br>
+     <br>
+     <img src="C:\Users\MAHI\Desktop\CLOUD 5\LIVE-CODE\Screenshot 2025-08-05 095404.png">
+     
 
     <main> 
-    <h2>About Me</h2>
-   <p>This is my GitHub page</p>
-    <p>Check out my <a href="file:///C:/Users/MAHI/Desktop/CLOUD%205/LIVE-CODE/index.html">GitHub profile</a>.</p>
+    <h2 style="font-size: xx-large;">About Me</h2>
+    <br>
+   <p style="font-size: xx-large;">This is my  Live GitHub page</p>
+   <br>
+    <p style="font-size: xx-large;">Check out my <a href="file:///C:/Users/MAHI/Desktop/CLOUD%205/LIVE-CODE/index.html">GitHub profile</a>.</p>
     </main>
   
 
