--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body style="background-color: burlywood; border: 10px; border-color: black; text-align: center;">
+<body style="background-color: rgb(222, 135, 210); border: 10px; border-color: black; text-align: center;">
     
     <h1 style=" text-align: center; font-size:xx-large; color: white;"> hello this my live code</h1>
     <br>
