--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <title>Document</title>
 </head>
 <body style="background-color: rgb(222, 135, 210); border: 10px; border-color: black; text-align: center;">
-    
+    <img src="C:\Users\MAHI\Desktop\images.jpeg">
     <h1 style=" text-align: center; font-size:xx-large; color: white;"> hello this my live code</h1>
+    
     <br>
 
      <img src="C:\Users\MAHI\Desktop\images.jpeg">
